# BME-PROG2-NHF-WIP

./: CMakeLists.txt  README.md  alarm.cpp  alarm.h  component.h  gtest_lite.h  logicalgate.cpp  logicalgate.h  main.cpp  sensor.cpp  sensor.h  switch.cpp  switch.h  test.cpp
